@@ -4,26 +4,29 @@
  */
 package pl.edu.icm.unity.oauth.client.profile;
 
-import java.net.URL;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
+import org.apache.http.NameValuePair;
+import org.apache.http.client.utils.URIBuilder;
 import org.apache.logging.log4j.Logger;
 
 import com.nimbusds.oauth2.sdk.http.HTTPRequest;
 import com.nimbusds.oauth2.sdk.http.HTTPRequest.Method;
 import com.nimbusds.oauth2.sdk.http.HTTPResponse;
 import com.nimbusds.oauth2.sdk.token.BearerAccessToken;
+import com.nimbusds.oauth2.sdk.util.URLUtils;
 
 import eu.unicore.util.httpclient.ServerHostnameCheckingMode;
 import net.minidev.json.JSONObject;
 import pl.edu.icm.unity.base.utils.Log;
 import pl.edu.icm.unity.engine.api.authn.AuthenticationException;
 import pl.edu.icm.unity.oauth.BaseRemoteASProperties;
-import pl.edu.icm.unity.oauth.client.CustomHTTPSRequest;
 import pl.edu.icm.unity.oauth.client.AttributeFetchResult;
+import pl.edu.icm.unity.oauth.client.CustomHTTPSRequest;
 import pl.edu.icm.unity.oauth.client.UserProfileFetcher;
-import pl.edu.icm.unity.oauth.client.config.CustomProviderProperties;
 import pl.edu.icm.unity.oauth.client.config.CustomProviderProperties.ClientAuthnMode;
 
 /**
@@ -45,7 +48,13 @@ public class PlainProfileFetcher implements UserProfileFetcher
 			Map<String, List<String>> attributesSoFar) throws Exception
 	{
 
-		HTTPRequest httpReqRaw = new HTTPRequest(Method.GET, new URL(userInfoEndpoint));
+		Map<String, String> queryParams = new HashMap<>();
+		URIBuilder uri = new URIBuilder(userInfoEndpoint);
+		queryParams.putAll(uri.getQueryParams()
+				.stream().collect(Collectors.toMap(NameValuePair::getName,
+						NameValuePair::getValue)));	
+		uri.clearParameters();
+		HTTPRequest httpReqRaw = new HTTPRequest(Method.GET, uri.build().toURL());
 
 		ServerHostnameCheckingMode checkingMode = providerConfig.getEnumValue(
 				BaseRemoteASProperties.CLIENT_HOSTNAME_CHECKING,
@@ -53,13 +62,19 @@ public class PlainProfileFetcher implements UserProfileFetcher
 
 		HTTPRequest httpReq = new CustomHTTPSRequest(httpReqRaw,
 				providerConfig.getValidator(), checkingMode);
-		ClientAuthnMode selectedMethod = providerConfig.getEnumValue(
-				CustomProviderProperties.CLIENT_AUTHN_MODE, ClientAuthnMode.class);
-		if (selectedMethod == ClientAuthnMode.secretPost)
-			httpReq.setQuery("access_token=" + accessToken.getValue());
+		
+		
+		if (providerConfig
+				.getClientAuthModeForProfileAccess() == ClientAuthnMode.secretPost)
+			queryParams.put("access_token", accessToken.getValue());
 		else
 			httpReq.setAuthorization(accessToken.toAuthorizationHeader());
 
+		if (!queryParams.isEmpty())
+		{
+			httpReq.setQuery(URLUtils.serializeParameters(queryParams));
+		}
+		
 		HTTPResponse resp = httpReq.send();
 
 		if (resp.getStatusCode() != 200)
